不在使用sun的私有方法，改为直接使用codec的Base64方法做加密和解密